# lrc-automation

./: .dockerignore  .env.example  .gitattributes  .gitignore  404.html  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
.planning/milestones/: v0.6.0-REQUIREMENTS.md
.planning/milestones/v0.6.0-phases/01-path-safety/: 01-01-PLAN.md  01-02-PLAN.md  01-03-PLAN.md  01-03-SUMMARY.md  01-RESEARCH.md  01-VALIDATION.md
.planning/milestones/v0.6.0-phases/02-write-safety/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/milestones/v0.6.0-phases/03-ci-matrix/: 03-01-PLAN.md  03-01-SUMMARY.md  03-RESEARCH.md  03-VALIDATION.md  03-VERIFICATION.md
.planning/milestones/v0.6.0-phases/04-ux-and-docs/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-03-PLAN.md  04-03-SUMMARY.md  04-VERIFICATION.md
.planning/phases/01-path-safety/: 01-01-SUMMARY.md  01-02-SUMMARY.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-write-safety/: 02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-RESEARCH.md
.planning/phases/03-ci-matrix/: 03-02-PLAN.md  03-02-SUMMARY.md  03-RESEARCH.md
.planning/phases/04-ux-and-docs/: 04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-RESEARCH.md  04-VALIDATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
adr/001-lightroom-classic-catalog-automation/: index.html
adr/002-executor-safety-and-error-handling/: index.html
adr/003-filesystem-reliability-year-root-empty-folder/: index.html
adr/004-disk-audit-file-search-logging/: index.html
adr/005-reconcile-command/: index.html
adr/006-cross-root-year-in-year-migration/: index.html
adr/007-multiplatform-windows-support/: index.html
architecture/: index.html
docs/: architecture.md  index.md  prd.md  usage.md
docs/adr/: 001-lightroom-classic-catalog-automation.md  002-executor-safety-and-error-handling.md  003-filesystem-reliability-year-root-empty-folder.md  004-disk-audit-file-search-logging.md  005-reconcile-command.md  006-cross-root-year-in-year-migration.md  007-multiplatform-windows-support.md
prd/: index.html
search/: search_index.json
src/lrc_automation/: __init__.py  catalog.py  cli.py  constants.py  executor.py  geocoder.py  log.py  models.py  planner.py  reconciler.py  reporter.py  scanner.py  utils.py  validators.py
tests/: conftest.py  test_catalog.py  test_cli.py  test_executor.py  test_geocoder.py  test_models.py  test_packaging.py  test_planner.py  test_reconciler.py  test_reporter.py  test_scanner.py  test_utils.py  test_validators.py
usage/: index.html
