[project]
name = "lrc-automation"
version = "0.6.1"
description = "Lightroom Classic catalog automation - fix misplaced photos and duplicate filenames"
readme = "README.md"
authors = [
    { name = "Frederic Jacquet", email = "fred@ljf.ch" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "psutil>=5.9",
    "python-dotenv>=1.2.1",
    "rich>=14.3.2",
]

[project.optional-dependencies]
geo = ["reverse_geocoder>=1.5.1", "pycountry>=24.6.1"]

[project.scripts]
lrc-auto = "lrc_automation.cli:main"

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "cyclonedx-bom>=4.6",
    "mkdocs>=1.6",
    "mkdocs-material>=9.6",
    "mypy>=1.14",
    "pyinstaller>=6.0",
    "pytest>=9.0.3",
    "pytest-cov>=6.0",
    "ruff>=0.15.1",
    "types-psutil>=7.2.2.20260130",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.mypy]
strict = true
python_version = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[[tool.mypy.overrides]]
module = "reverse_geocoder"
ignore_missing_imports = true
